# ai_news_summarizer

./: README.md  pyproject.toml  report.md
news/: 2025-02-15_15-43-31_news_w_joke.md  2025-02-15_17-14-26_news.md
src/latest_ai_developement/: crew.py  main.py
src/latest_ai_developement/config/: agents.yaml  tasks.yaml
