[project]
name = "latest_ai_developement"
version = "0.1.0"
description = "latest-ai-developement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
latest_ai_developement = "latest_ai_developement.main:run"
run_crew = "latest_ai_developement.main:run"
train = "latest_ai_developement.main:train"
replay = "latest_ai_developement.main:replay"
test = "latest_ai_developement.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
